# OmniCoding

./: .gitignore  PROVENANCE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: tests.yml
docs/: DATA_RELEASE.md  EVAL_SUBSETS.md  OPEN_SOURCE_MIGRATION_PLAN.md  RELEASE_CHECKLIST.md  RL_SECURITY.md  SYNTHETIC_AND_SFT.md
infra/cluster_profiles/: example.yaml
infra/slurm/: harness_item.sbatch  rl_worker.sbatch  serve_sglang.sbatch  train_rl.sbatch  train_sft.sbatch
integrations/ms_swift/: README.md  merge_lora.py  train_sft.sh
integrations/relax/: README.md  UPSTREAM.md  coordinator.env.example
integrations/relax/patches/: 0001-dual-clip-policy-loss.patch  0002-multimodal-train-inputs.patch  0003-rollout-proxy-concurrency.patch
integrations/sglang/: README.md  serve.sh
recipes/: benchmark.example.json  rl_27b_gspo.sh
release/: DATA_LICENSE_REVIEW.md  EXCLUSIONS.md  SOURCE_MAP.yaml  TRAJECTORY_AUDIT.md
release/trajectory_manifests/: codex_runs.json  qwen_27b_kira.json
schemas/: run_manifest.schema.json
src/omnicoding/: __init__.py  cli.py  paths.py
src/omnicoding/agents/: __init__.py
src/omnicoding/benchmarks/: __init__.py  eval_subsets.json  subsets.py
tests/: test_cli.py
tests/benchmarks/: test_omnigaia_prompt.py  test_packaging_paths.py  test_shared_python.py  test_specs.py  test_subsets.py  test_tavily_config.py  test_unified_prompt.py
tests/data/: test_conversion_native_image.py  test_conversion_terminal.py  test_rescore.py  test_trajectory_inventory.py
tests/integrations/: test_launch_scripts.py  test_ms_swift_merge.py
tests/rl/: conftest.py  test_build_prompt_set.py  test_dispatcher_coalesce.py  test_reward.py  test_rollout_payload.py  test_security.py  test_tokenize_multimodal.py  test_tokenize_trajectory.py
(+82 files in other folders)
